# data-faker-rust

./: Cargo.toml  README.md  test.csv  test.json  test.txt  tt1.csv
src/: lib.rs  main.rs
src/configuration/: definitions.rs  mod.rs
src/engine/: mod.rs
src/rules/: mod.rs
