[package]
name = "data-faker-rust"
version = "0.1.0"
authors = ["ZZDirty <muztaga2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1.3"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
crossbeam = "0.7"
rand = "0.7.3"

